# veilocity

./: .gitignore  Cargo.toml  Nargo.toml  README.md  Roadmap.md  Tech.md  doc.md  veilocity.md
.github/workflows/: ci.yml  release.yml
circuits/: Nargo.toml  README.md
circuits/src/: deposit.nr  lib.nr  main.nr  merkle.nr  poseidon_utils.nr  transfer.nr  withdraw.nr
circuits/withdraw/: Nargo.toml
circuits/withdraw/src/: main.nr
circuits/work/: Prover.toml
contracts/: .env.example  foundry.toml
contracts/broadcast/Deploy.s.sol/31337/: run-1766145862739.json  run-1766147475288.json
contracts/broadcast/Deploy.s.sol/5003/: run-1766150123445.json  run-latest.json
contracts/script/: Deploy.s.sol
contracts/src/: HonkVerifier.sol  VeilocityVault.sol
contracts/src/interfaces/: IVerifier.sol
contracts/src/mocks/: MockVerifier.sol
contracts/test/: VeilocityVault.t.sol
crates/veilocity-cli/: Cargo.toml  README.md
crates/veilocity-cli/src/: config.rs  main.rs  ui.rs  wallet.rs
crates/veilocity-cli/src/commands/: balance.rs  config.rs  deposit.rs  history.rs  init.rs  mod.rs  sync.rs  transfer.rs  withdraw.rs
crates/veilocity-contracts/: Cargo.toml
crates/veilocity-contracts/src/: anchor.rs  bindings.rs  error.rs  events.rs  lib.rs  vault.rs
crates/veilocity-core/: Cargo.toml
crates/veilocity-core/src/: account.rs  error.rs  lib.rs  merkle.rs  poseidon.rs  state.rs  transaction.rs
crates/veilocity-indexer/: Cargo.toml
crates/veilocity-indexer/src/: api.rs  indexer.rs  main.rs
crates/veilocity-prover/: Cargo.toml
crates/veilocity-prover/src/: error.rs  lib.rs  prover.rs  witness.rs
demo/: .env.example  .env.local.example  README.md  package-lock.json  package.json  tailwind.config.ts
demo/app/: globals.css  layout.tsx  page.tsx
demo/app/deposit/: page.tsx
demo/app/history/: page.tsx
demo/app/withdraw/: page.tsx
demo/components/: connect-button.tsx  deposit-form.tsx  nav.tsx  network-status.tsx  private-balance.tsx  providers.tsx  recent-deposits.tsx  transaction-history.tsx  vault-stats.tsx  withdraw-form.tsx
demo/lib/: abi.ts  crypto.ts  utils.ts  wagmi.ts
