[workspace]
resolver = "2"
members = [
    "crates/veilocity-core",
    "crates/veilocity-prover",
    "crates/veilocity-contracts",
    "crates/veilocity-cli",
]

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/abhirupinspace/veilocity"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }

# CLI framework
clap = { version = "4.5", features = ["derive"] }

# Ethereum/Mantle interaction
alloy = { version = "0.15", features = ["full"] }

# Cryptography (using ark 0.5 to match light-poseidon requirements)
ark-ff = "0.5"
ark-bn254 = "0.5"
light-poseidon = "0.3"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }
redb = "2.2"

# Serialization - Pin to a version compatible with alloy's __private usage
serde = { version = "=1.0.219", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Hex encoding
hex = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config
toml = "0.8"
directories = "5.0"

# Security
rand = "0.8"
