[package]
name = "veilocity-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "veilocity"
path = "src/main.rs"

[dependencies]
veilocity-core = { path = "../veilocity-core" }
veilocity-prover = { path = "../veilocity-prover" }
veilocity-contracts = { path = "../veilocity-contracts" }

clap.workspace = true
tokio.workspace = true
alloy.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
hex.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
toml.workspace = true
directories.workspace = true
rand.workspace = true

# Security
rpassword = "7.3"

# Directories
dirs = "5.0"
