[package]
name = "veilocity-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Private execution layer CLI for Mantle - deposit, transfer, and withdraw with zero-knowledge proofs"
readme = "README.md"
keywords = ["privacy", "zk", "mantle", "ethereum", "cli"]
categories = ["command-line-utilities", "cryptography"]

[[bin]]
name = "veilocity"
path = "src/main.rs"

[dependencies]
veilocity-core = { path = "../veilocity-core", version = "0.1.4" }
veilocity-prover = { path = "../veilocity-prover", version = "0.1.4" }
veilocity-contracts = { path = "../veilocity-contracts", version = "0.1.4" }

clap.workspace = true
tokio.workspace = true
alloy.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
hex.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
toml.workspace = true
directories.workspace = true
rand.workspace = true

# Security
rpassword = "7.3"
argon2 = "0.5"
aes-gcm = "0.10"
zeroize = { version = "1.7", features = ["derive"] }

# CLI UX
colored = "2.1"
indicatif = "0.17"

# HTTP client for indexer
reqwest = { version = "0.12", features = ["json"] }

# Directories
dirs = "5.0"
