[package]
name = "veilocity-contracts"
version.workspace = true
edition.workspace = true

[dependencies]
veilocity-core = { path = "../veilocity-core" }
alloy.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
hex.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
