[package]
name = "veilocity-contracts"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Smart contract bindings for Veilocity on Mantle"
keywords = ["privacy", "zk", "mantle", "ethereum"]
categories = ["cryptography"]

[dependencies]
veilocity-core = { path = "../veilocity-core", version = "0.1.4" }
alloy.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
hex.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
