[package]
name = "veilocity-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for Veilocity - Poseidon hashing, Merkle trees, and state management"
keywords = ["privacy", "zk", "poseidon", "merkle"]
categories = ["cryptography"]

[dependencies]
ark-ff.workspace = true
ark-bn254.workspace = true
light-poseidon.workspace = true
rusqlite.workspace = true
redb.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
hex.workspace = true
rand.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
