[package]
name = "veilocity-indexer"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Fast indexer service for Veilocity - provides instant state sync"

[[bin]]
name = "veilocity-indexer"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
alloy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
toml = { workspace = true }

# Internal crates
veilocity-core = { path = "../veilocity-core" }
veilocity-contracts = { path = "../veilocity-contracts" }

# Web server
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }

# CLI args
clap = { version = "4.5", features = ["derive", "env"] }
