[package]
name = "veilocity-prover"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "ZK proof generation for Veilocity using Noir circuits"
keywords = ["privacy", "zk", "noir", "prover"]
categories = ["cryptography"]

[dependencies]
veilocity-core = { path = "../veilocity-core", version = "0.1.2" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
hex.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
